[package]
name = "dss-takehome"
version = "0.1.0"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"

[dependencies]
reqwest = { version =  "0.11.1", features = ["blocking"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sanitize-filename = "0.3.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
miniquad = "0.2.55"
jpeg-decoder = "0.1.22"
