[package]
name = "dss-takehome"
version = "0.1.0"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"

[dependencies]
reqwest = { version =  "0.11.1", features = ["blocking"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sanitize-filename = "0.3.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
miniquad = "0.3.0-alpha.26"
jpeg-decoder = "0.1.22"
sled = "0.34.6"
lazy_static = "1.4.0"
bincode = "1.3.2"

[dependencies.miniquad_text_rusttype]
git = "https://github.com/bddap/miniquad_text_rusttype.git"
rev = "12d30006be7a02323350e60c753e2fbc0a07614f"

# All dependencies (but not this crate itself or any workspace member)
# will be compiled with -Copt-level=2 . This includes build dependencies.
[profile.dev.package."*"]
opt-level = 2
